--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="references.html">References</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
           </ul>
         </nav>
       </header>
@@ -50,6 +51,7 @@
             <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="references.html">References & Resources</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
           </ol>
         </article>
         <aside class="sidebar card">
@@ -87,6 +89,8 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+
     </ul>
   </nav>
 </header>
@@ -156,6 +160,7 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
   </nav>
 </header>
@@ -209,6 +214,8 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+
     </ul>
   </nav>
 </header>
