Added quiz functionality and updated HTML structure for better user experience. Implemented JavaScript functions to handle quiz logic and user interactions.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="references.html">References</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
+
+          
           </ul>
         </nav>
       </header>
       <main>
         <article class="card">
           <h2>Abstract</h2>
-          <p>This project explores how sharing personal information across multiple social platforms increases the risk of cross-platform cyber-attacks, such as social engineering, credential stuffing, and identity fraud. This milestone provides the site structure and basic content to be expanded in future milestones.</p>
+          <p>This project explores the hardware components of a computer and explains how they work both independently and together to perform the functions needed to operate modern systems.</p>
           <h2 class="u-mtop">Key Terms</h2>
           <ul>
             <li>CPU'S</li>
@@ -42,6 +45,7 @@
             <li>Ram</li>
             <li>First Comings of Computing</li>
             <li>Understanding Basics of Computing</li>
+          
           </ul>
           <h2 class="u-mtop">Table of Contents</h2>
           <ol>
@@ -50,6 +54,7 @@
             <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="references.html">References & Resources</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
           </ol>
         </article>
         <aside class="sidebar card">
@@ -87,6 +92,8 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+
     </ul>
   </nav>
 </header>
@@ -156,6 +163,7 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
   </nav>
 </header>
@@ -209,6 +217,7 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
   </nav>
 </header>
