--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
       <li><a href="concepts.html">Key Concepts</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="references.html">References</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+
     </ul>
   </nav>
 </header>
