chaanged aspects of style file and index and fixed problem with navigation bar not wrapping on small screens. and picture added and zip file chaanged aspects of style file and index and fixed problem with navigation bar not wrapping on small screens. and picture added and zip file

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="references.html">References</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
           </ul>
         </nav>
       </header>
@@ -239,7 +240,7 @@
 
   <aside class="sidebar card">
     <h3>Project Notes</h3>
-    <p>This site is structured for Milestone 1. Content and references will grow in subsequent milestones.</p>
+    <p>This site is structured for Milestone 3. Content and references will grow in subsequent milestones.</p>
   </aside>
 </main>
 
