changed from spaces to underscores in filenames and updated index.html accordingly.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="topic1.html">Components of a Computer</a></li>
             <li><a href="topic2.html">History and Evolution of Computers</a></li>
-            <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="references.html">References</a></li>
             <li><a href="quiz.html">Quiz</a></li>
           </ul>
         </nav>
@@ -34,7 +32,7 @@
       <main>
         <article class="card">
           <h2>Abstract</h2>
-          <p>This project explores the hardware components of a computer and explains how they work both independently and together to perform the functions needed to operate modern systems.</p>
+          <p>This project explores the hardware components of a computer and examines how they function both independently and collaboratively to enable modern computing. It delves into the roles of core components such as the CPU, memory, storage devices, input/output devices, and motherboard, explaining how each contributes to processing, storing, and transmitting data. Additionally, the project highlights how these components work together to execute instructions, run applications, and support the overall operation of modern computer systems.</p>
 
           <h2 class="u-mtop">Key Terms</h2>
           <ul>
@@ -49,9 +47,7 @@
           <ol>
             <li><a href="topic1.html">Components of a Computer</a></li>
             <li><a href="topic2.html">History and Evolution of Computers</a></li>
-            <li><a href="concepts.html">Key Concepts</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="references.html">References & Resources</a></li>
             <li><a href="quiz.html">Quiz</a></li>
           </ol>
         </article>
@@ -59,7 +55,7 @@
         <aside class="sidebar card">
           <h3>Milestone 1</h3>
           <p>This milestone focuses on site structure, HTML elements, and core styling. Research content will grow in upcoming milestones.</p>
-          <img src="images/Computer IT3203.jpg" alt="Networked computers illustration">
+          <img src="images/ComputerIT3203.jpg" alt="Networked computers illustration">
           <p class="u-mtop"><strong>Instructor:</strong> IT3203 Web Development</p>
         </aside>
       </main>
