--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <aside class="sidebar card">
           <h3>Milestone 1</h3>
           <p>This milestone focuses on site structure, HTML elements, and core styling. Research content will grow in upcoming milestones.</p>
-          <img src="images/ComputerIT3203.jpg" alt="Networked computers illustration">
+          <img src="images/Computer_IT3203.jpg" alt="Networked computers illustration">
           <p class="u-mtop"><strong>Instructor:</strong> IT3203 Web Development</p>
         </aside>
       </main>
